# image-detect

./: .gitignore  CMakeLists.txt  Makefile  README.md  main.cpp
go-sample/: image-detect.i  main.go
lib/include/: image-detect.h
lib/src/: image-detect.cpp
